--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,10 @@
   "rules": {
     "prettier/prettier": "warn",
     "import/prefer-default-export": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "^_" }
+    ],
     "no-console": ["warn", { "allow": ["warn", "error"] }],
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn"
