--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "crons": [
-    { "path": "/api/poll", "schedule": "*/10 * * * *" }
-  ]
+  "crons": [{ "path": "/api/poll", "schedule": "*/10 * * * *" }]
 }
